# maqina

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml  run_bench_readme.sh  run_compute_references.sh
.cargo/: config.toml
.claude/: solve-overrides.md
.claude/agents/: test-runner.md
.claude/skills/test-runner/: SKILL.md
benchmarks/: README.md  __init__.py  _readme_figure_helpers.py  bench_block_fusion.py  bench_m_eff_adiabatic.py  bench_observables.py  bench_parallel_scaling.py  bench_per_step.py  bench_qutip_large.py  bench_readme_figure.py  bench_simd_scaling.py  bench_stepsize_controller.py  build_readme_problem.py  compute_readme_reference.py  plot_readme_figure.py
benchmarks/data/: problem_non-stiff_n18_seed20260518.npz  problem_stiff_n18_seed20260518.npz
benchmarks/data/0.8.0/: bench_non-stiff.csv  bench_stiff.csv
benchmarks/data/qutip/: bench_non-stiff.csv  bench_stiff.csv
benchmarks/results/0.12.0/: SUMMARY.md  bench_non-stiff.csv  bench_non-stiff.md  bench_stiff.csv  bench_stiff.md
benchmarks/results/0.8.0/: SUMMARY.md  bench_block_fusion.md  bench_non-stiff.csv  bench_parallel_scaling.md  bench_per_step.md  bench_qutip_large.md
docs/: chebyshev-explained.md  conventions.md  design.md  quickstart.md  testing.md
docs/design/: 01-goals.md  02-physics.md  03-architecture.md  04-python-api.md  05-1-matvec.md  05-2-lanczos.md  05-3-propagator.md  05-4-python-reference.md  06-builders.md  07-rust-extension.md  08-qutip-comparison.md  09-testing.md  10-benchmarks.md  11-build-infrastructure.md  12-release-plan.md  13-future-work.md  14-references.md  INDEX.md
docs/figures/: .gitkeep
python/kinema/: __init__.py  __init__.pyi  _helpers.py  _helpers.pyi  annealer.py  annealer.pyi  eigenstates.py  eigenstates.pyi  krylov.py  krylov.pyi  observable.py  observable.pyi  problem.py  problem.pyi  reference_qutip.py  reference_qutip.pyi  result.py  schedule.pyi  simulator.py  simulator.pyi
python/kryanneal/: __init__.py  __init__.pyi  _helpers.py  _helpers.pyi  annealer.py  annealer.pyi  builders.py  eigenstates.py  eigenstates.pyi  initial_states.py  initial_states.pyi  krylov.py  krylov.pyi  observable.py  observable.pyi  problem.py  problem.pyi  reference_qutip.py  reference_qutip.pyi  result.py  result.pyi  schedule.py  schedule.pyi  simulator.py  simulator.pyi
python/maqina/: __init__.py  __init__.pyi  _helpers.py  _helpers.pyi  annealer.py  annealer.pyi  builders.pyi  controller.py  controller.pyi  eigenstates.py  eigenstates.pyi  krylov.py  krylov.pyi  observable.py  observable.pyi  problem.py  problem.pyi  reference_qutip.py  reference_qutip.pyi  result.py  result.pyi  schedule.py  schedule.pyi  simulator.py  simulator.pyi
scripts/: probe_m_eff_n18.py  run_bench_readme.sh  run_bench_readme_0_14_0.sh  run_bench_readme_chebyshev.sh  run_compute_references.sh  run_compute_references_bdf_sweep.sh
src/: blas.rs  cfm4.rs  chebyshev.rs  krylov.rs  lib.rs  matvec.rs  tridiag.rs  trotter.rs
tests/: _controller_harness.py  _controller_metrics.py  test_adaptive.py  test_annealer.py  test_bench_per_step.py  test_bench_stepsize_controller.py  test_blas_consistency.py  test_cfm4.py  test_cfm4_m2_embedded.py  test_chebyshev.py  test_controller_growth_freeze.py  test_controller_metrics.py  test_controller_pi.py  test_controller_reject_clamp.py  test_controller_sawtooth.py  test_eigenstates.py  test_initial_states.py  test_krylov.py  test_matvec.py  test_observable.py  test_observable_integration.py  test_packaging.py  test_problem.py  test_reference_qutip.py  test_result.py  test_richardson.py  test_schedule.py  test_simulator.py  test_trotter.py  test_xyz_schedule.py
tools/: analyze_beta_m_results.py  diff_blas_artifacts.py  extract_qutip_rows.py  gen_api_stubs.py  migrate_existing_csv.sh  verify_beta_m_estimator.py
