[package]
name = "kryanneal"
version = "0.5.0"
edition = "2021"
publish = false

[lib]
name = "_rust"
# `cdylib`: maturin が wheel に同梱する Python 拡張用の動的ライブラリ.
# `rlib`: `cargo test` の test target が `_rust` クレートをライブラリとして
#         リンクできるようにする. 純 cdylib のみだと Cargo が test binary を
#         ビルドできない.
crate-type = ["cdylib", "rlib"]

[features]
# `blas`: link a system BLAS so `lanczos_propagate` の Level-1 / Level-2 ops を
# CBLAS 経由で実行する. target ごとに backend を自動選択する:
#
# * macOS: Apple Accelerate (`accelerate-src` 経由, 追加 install 不要).
# * Linux: system OpenBLAS (`openblas-src/system`). 本番ビルドでは
#   `libopenblas-dev` (Debian/Ubuntu) などのパッケージを事前にインストール
#   しておくこと.
#
# BLAS が利用できない環境向けのフォールバックとして
# `cargo build --no-default-features` (maturin/uv では
# `MATURIN_PEP517_ARGS="--no-default-features"`) で純 Rust の scalar ループ
# 経路をビルドできる. 数値結果は両経路で 1e-13 相対精度以内で一致する.
#
# `extension-module`: pyo3 を Python 拡張モード (libpython を静的にリンク
# せず, ホスト Python 側でシンボルを供給する) でビルドする. wheel ビルドでは
# 必須だが `cargo test` の test binary は自前で実行されるため有効にすると
# `_PyObject_*` 等が未解決になる. このため default features には含めず,
# wheel ビルドでは pyproject.toml の `[tool.maturin] features` から明示的に
# 有効化する. 普通の `cargo test` / `cargo build` では無効のまま.
#
# `rayon`: matvec / Trotter primitives (`src/matvec.rs`) の bit-flip pass を
# `rayon::par_chunks_mut` で L2 並列化する (`docs/design.md` §12 Phase 6 C1,
# issue #62). default ON で BLAS と同様, scalar single-threaded ビルドは
# `cargo build --no-default-features` で従来挙動を維持できる. rayon thread
# 数は環境変数 `RAYON_NUM_THREADS` で制御し, BLAS thread (既存
# `set_blas_threads(n)`) と重ねがけにならないよう運用するのが推奨
# (`CLAUDE.md` 物理的取り決め節参照).
default = ["blas", "rayon"]
blas = ["dep:cblas", "dep:blas-src"]
rayon = ["dep:rayon"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.28"
numpy = "0.28"
num-complex = "0.4"
# Lanczos 内の m × m (m ≈ 24) 実対称三重対角固有分解は src/tridiag.rs に
# hand-rolled な implicit QL with Wilkinson shift で実装する (詳細は
# docs/design.md §7.1)。LAPACK 依存を切ることで macOS Apple Accelerate
# を Level-1/2 BLAS でフル活用しつつ追加 install を不要にする。
ndarray = "0.16"
cblas = { version = "0.5", optional = true }
rayon = { version = "1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.12", features = ["accelerate"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.12", features = ["openblas"], optional = true }
# `blas-src/openblas` が optional dep として openblas-src を pull するが,
# Linux 本番では system OpenBLAS をリンクしたいので明示的に `system` feature
# を付けて features を unify させる.
openblas-src = { version = "0.10", default-features = false, features = ["system"], optional = true }

[dev-dependencies]
# 三重対角固有分解 (src/tridiag.rs) の cargo test での参照実装。
# 本体ビルドには載らない。pure-Rust 線形代数なので追加 install は不要。
nalgebra = { version = "0.34", default-features = false, features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
