[package]
name = "kryanneal"
version = "0.5.0"
edition = "2021"
publish = false

[lib]
name = "_rust"
# `cdylib`: maturin が wheel に同梱する Python 拡張用の動的ライブラリ.
# `rlib`: `cargo test` の test target が `_rust` クレートをライブラリとして
#         リンクできるようにする. 純 cdylib のみだと Cargo が test binary を
#         ビルドできない.
crate-type = ["cdylib", "rlib"]

[features]
# `blas`: link a system BLAS so `lanczos_propagate` の Level-1 / Level-2 ops を
# CBLAS 経由で実行する. target ごとに backend を自動選択する:
#
# * macOS: Apple Accelerate (`accelerate-src` 経由, 追加 install 不要).
# * Linux: system OpenBLAS (`openblas-src/system`). 本番ビルドでは
#   `libopenblas-dev` (Debian/Ubuntu) などのパッケージを事前にインストール
#   しておくこと.
#
# BLAS が利用できない環境向けのフォールバックとして
# `cargo build --no-default-features` で純 Rust の scalar ループ経路をビルド
# できる. 数値結果は両経路で 1e-13 相対精度以内で一致する.
#
# maturin 経由で同じことをするときの feature 制御は **build 経路で 2 系統に
# 分かれる** 点に注意:
#
#   * **wheel build (PEP 517 backend 経由, `pip install` / `uv build` /
#     `python -m build` 等)**: 環境変数 `MATURIN_PEP517_ARGS` に cargo
#     向け追加引数を入れる. 例:
#       `MATURIN_PEP517_ARGS="--no-default-features --features extension-module,blas,rayon" \`
#       `    uv pip install .`
#   * **`maturin develop` 経由 (本プロジェクトの日常ビルド経路)**: PEP 517
#     backend を介さず cargo を直接呼ぶため `MATURIN_PEP517_ARGS` は **無視
#     される**. feature 制御は `maturin develop` 直下のフラグで渡す:
#       `uv run maturin develop --uv --release \`
#       `    --no-default-features --features extension-module,blas,rayon`
#     `extension-module` を明示するのは, `--features` を渡すと
#     `[tool.maturin] features = ["extension-module"]` (pyproject.toml) 側の
#     設定が上書きされるため. 落とすと libpython 未解決でリンク失敗する.
#
# `extension-module`: pyo3 を Python 拡張モード (libpython を静的にリンク
# せず, ホスト Python 側でシンボルを供給する) でビルドする. wheel ビルドでは
# 必須だが `cargo test` の test binary は自前で実行されるため有効にすると
# `_PyObject_*` 等が未解決になる. このため default features には含めず,
# wheel ビルドでは pyproject.toml の `[tool.maturin] features` から明示的に
# 有効化する. 普通の `cargo test` / `cargo build` では無効のまま.
#
# `rayon`: matvec / Trotter primitives (`src/matvec.rs`) の bit-flip pass を
# `rayon::par_chunks_mut` で L2 並列化する (`docs/design.md` §12 Phase 6 C1,
# issue #62). default ON で BLAS と同様, scalar single-threaded ビルドは
# `cargo build --no-default-features` で従来挙動を維持できる. rayon thread
# 数は環境変数 `RAYON_NUM_THREADS` で制御し, BLAS thread (既存
# `set_blas_threads(n)`) と重ねがけにならないよう運用するのが推奨
# (`CLAUDE.md` 物理的取り決め節参照).
#
# `simd`: `src/matvec.rs::apply_h_kryanneal` の bit-flip pass のうち
# i=0,1,2 (stride 1/2/4 連続アクセス領域) を `wide::f64x4` 経由で SIMD 特化
# する (`docs/design.md` §12 Phase 6 C2, issue #63). default ON で stable Rust
# だけで AVX2 / AVX-512 / NEON への自動 dispatch が効く (`wide` クレートが
# `target_feature` を見て選択). `--no-default-features` で scalar 経路に戻り
# `wide` 依存も外れる. SIMD は per-thread 最適化なので rayon と直交し,
# `apply_h_kryanneal_serial` (小 dim) と `apply_h_kryanneal_rayon` (大 dim)
# の両 path で共通の inner kernel を呼ぶ構造になっている (issue #68 follow-up
# で導入された `MIN_RAYON_DIM` dispatch との直交性).
default = ["blas", "rayon", "simd"]
blas = ["dep:cblas", "dep:blas-src"]
rayon = ["dep:rayon"]
simd = ["dep:wide"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.28"
numpy = "0.28"
num-complex = "0.4"
# Lanczos 内の m × m (m ≈ 24) 実対称三重対角固有分解は src/tridiag.rs に
# hand-rolled な implicit QL with Wilkinson shift で実装する (詳細は
# docs/design.md §7.1)。LAPACK 依存を切ることで macOS Apple Accelerate
# を Level-1/2 BLAS でフル活用しつつ追加 install を不要にする。
ndarray = "0.16"
cblas = { version = "0.5", optional = true }
rayon = { version = "1", optional = true }
# `wide`: stable Rust の portable SIMD (`feature = "simd"`, default ON).
# `f64x4` を AVX2 (x86_64) / AVX-512 (x86_64-v4) / NEON (aarch64) に
# `target_feature` 経由で自動 dispatch する. issue #63 では当初 `wide = "0.7"`
# が指定されたが現行 stable は 1.x 系 (1.4.0 が最新) なので `"1"` を採用.
# API は f64x4 中心で 0.7 → 1.x 間に大差なく, MSRV を狭めない方針も維持される.
wide = { version = "1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.12", features = ["accelerate"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.12", features = ["openblas"], optional = true }
# `blas-src/openblas` が optional dep として openblas-src を pull するが,
# Linux 本番では system OpenBLAS をリンクしたいので明示的に `system` feature
# を付けて features を unify させる.
openblas-src = { version = "0.10", default-features = false, features = ["system"], optional = true }

[dev-dependencies]
# 三重対角固有分解 (src/tridiag.rs) の cargo test での参照実装。
# 本体ビルドには載らない。pure-Rust 線形代数なので追加 install は不要。
nalgebra = { version = "0.34", default-features = false, features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
